# stellarfiles

./: Cargo.toml  Justfile  LICENSE  README.md  org.freedesktop.impl.portal.desktop.stellarfiles.service  stellarfiles.desktop  stellarfiles.portal
.github/workflows/: release.yml  rust.yml
locales/: en.yml  pt.yml
src/: errors.rs  main.rs  math.rs  types.rs
src/app/: state.rs
src/app/update/: file.rs  mod.rs  nav.rs  sys.rs  task.rs  ui.rs
src/app/view/: bottom_bar.rs  file_list.rs  header.rs  mod.rs  modals.rs  sidebar.rs  status_bar.rs  topbar.rs
src/file_ops/: archive.rs  copy.rs  delete.rs  mod.rs  read.rs  rename.rs  shred.rs  watcher.rs
